src/test/rustdoc-ui/assoc-item-not-in-scope.stderr
error: unresolved link to `S::fmt`
  --> $DIR/assoc-item-not-in-scope.rs:4:14
   |
LL | /// Link to [`S::fmt`]
   |              ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/assoc-item-not-in-scope.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = note: the struct `S` has no field or associated item named `fmt`

error: aborting due to previous error

